--- a/ImageScore.ipynb
+++ b/ImageScore.ipynb
@@ -173,7 +173,7 @@
         "output_file_name = 'similarity_scores' #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ##### output_file_path: Path to store image score file\n",
-        "output_file_path = '/content/drive/MyDrive/ImageScore/Test_Scores' #@param {type:\"string\"}\n",
+        "output_file_path = '' #@param {type:\"string\"}\n",
         "\n",
         "# Join the output_file_path and output_file_name to create the full path\n",
         "full_output_file_path = os.path.join(output_file_path, output_file_name)\n",
