--- a/ImageScore.ipynb
+++ b/ImageScore.ipynb
@@ -507,7 +507,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            ""
+            "Filtered files saved to /content/drive/MyDrive/ImageScore/avgncle/avgscores\n"
           ]
         }
       ]
